# ZenB

./: .gitignore  App.tsx  DESIGN_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  README.md  SECURITY.md  capacitor.config.ts  index-debug.tsx  index.html  index.tsx  metadata.json  package-lock.json  package.json  run-zenb.sh  store.ts  tailwind.config.js  types.ts  vite.config.ts
components/: OrbBreathViz.tsx
docs/: ORB_DESIGN_AUDIT.md  RUST_INTEGRATION_ROADMAP.md
hooks/: useBreathEngine.ts
public/audio/: README.md
rust-core/: Cargo.toml  lib.rs
rust-core/src/: zenone.udl
scripts/: validate-audio-assets.ts
services/: audio.ts
src/: App.tsx  index.css  translations.ts  types.ts  web-bluetooth.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src/components/: ActiveSessionDisplay.tsx  HolodeckOverlay.tsx  KernelMonitor.tsx  OrbBreathVizZenSciFi.tsx  PassphraseSetup.tsx
src/config/: SafetyConfig.ts
src/design-system/: GlassCard.tsx  LoadingStates.tsx  Primitives.tsx  animations.ts  index.ts  tokens.ts
src/engine/: EngineProvider.tsx  SensoryCoordinator.ts
src/hooks/: useAdaptiveQuality.ts  useBreathEngine.ts  useCameraVitals.ts  useDisplay.ts
src/kernel/: KernelProvider.tsx  PureZenBKernel.test.ts
src/platform/: display.test.ts  display.ts  runtime.ts
src/services/: AIToolRegistry.ts  BinauralEngine.ts  BluetoothManager.ts  CameraVitalsEngine.v2.ts  GeminiSomaticBridge.test.ts  GeminiSomaticBridge.ts  Holodeck.integration.test.ts  Holodeck.ts  OnlineStatusManager.ts  PIDController.ts  RPPGProcessor.ts  RustKernelBridge.ts  SafetyMonitor.ts  SecureBioFS.test.ts  SecureBioFS.ts  SoundscapeEngine.ts  TauriRuntime.ts  TelemetryService.ts  UKFStateEstimator.ts  WakeLockManager.ts  WearableService.ts  audio.test.ts  audio.ts  audioAssets.test.ts  audioAssets.ts  bioFS.ts  (+4 more)
(+24 files in other folders)
